Write a comprehensive README and add MIT license
Full benchmark table, install instructions per language, usage/flags
reference, project layout, and design-decision notes, ahead of making the
repo public.